erigam/static/scss/chat.scss
@import 'fonts';

/* General */

body {
	margin: 5px;
	background-color: #cccccc;
	background-attachment: fixed;
	word-wrap: break-word;
	background-image: none;
	/*main one: http://i.imgur.com/1gA5miD.jpg*/
	background-size: 100% 100%;
	background-repeat: no-repeat;
	background-position: center;
	word-wrap: break-word;
}

body, button, input, select, optgroup, option {
	font-family: "Courier", monospace;
	font-size: 12px;
	font-weight: bold;
}

a {
	text-decoration: none;

	&:link, &:visited, &:active {
		text-decoration: none;
	}

	&:hover {
		text-decoration: underline;
	}
}


h1 {
	font-size: 1.25rem;
	word-wrap: break-word;
}

p {
	margin: 0;
	padding: 2px 5px;
}

hr {
	margin: 5px 0;
	border-color: #999999;
	border-style: solid;
	border-width: 1px 0 0 0;
}

button, input, select, #conversation, #settings, #userList, #preview, .aButton, #archiveConversation, .pager {
	border: 1px solid #999999;
	border-radius: 1px;
}

#conversation, #settings, #userList, #preview, #archiveConversation, .pager {
	background-color: #eeeeee;
}

button, .aButton {
	background-color: rgba(83,83,83,0.8);
	color: #eeeeee;
}

input, select {
	background-color: rgba(255,255,255,0.8);
}

input[type="submit"], button, .aButton {
	margin: 1px;
	display: inline-block;
	padding: 2px 4px;
	cursor: pointer;
}

input {
	padding: 2px;
}

optgroup {
	color: #666666;
	font-style: normal;

	option {
		color: #000000;
		padding: 0 10px;
	}
}

input:focus, input:hover, select:focus, select:hover, button:hover, .aButton:hover {
	background-color: #ffffff;
}

button:hover, .aButton:hover {
	background-color: #666666;
}

.aButton:hover {
	text-decoration: none;
}

/* Chat layout */

#conversation {
	position: fixed;
	top: 5px;
	right: 5px;
	bottom: 79px;
	left: 5px;
	overflow: auto;
	padding: 2px 0;

	&.search {
		background-image: url('/static/img/throbber-big.gif');
		background-repeat: no-repeat;
		background-position: center;
	}

	body.withSidebar & {
		right: 230px;
	}
}

.sidebar {
	display: none;
	position: fixed;
	top: 5px;
	right: 5px;
	bottom: 5px;
	width: 218px;
	overflow: auto;

	.close {
		display: none;
	}

	ul {
		margin: 0;
		padding: 0 0 0 2em;
	}

	ul ul {
		color: #000;
	}

	ul li {
		padding: 2px 0;
	}
}

#topic {
	padding: 0 5px 5px;
	word-wrap: break-word;

	&:empty {
		display: none;
	}
}

#online:empty:after, #idle:empty:after {
	content: "(no-one)";
	display: block;
	padding: 2px 0;
	color: #999999;
	font-style: italic;
}

#online li, #idle li {
	cursor: pointer;
}

#controls {
	position: fixed;
	right: 8px;
	bottom: 5px;
	left: 8px;
}

body.withSidebar #controls {
	right: 233px;
}

#controls input[type="submit"], #controls button, .aButton {
	margin: 5px 0 0 0;
}

#hidePreview {
	position: absolute;
	right: 0;
	padding: 2px;
}

#preview {
	margin: 0 -3px -1px -3px;
	padding: 2px;
	overflow: hidden;
}

#textInput {
	display: block;
	width: 100%;
	margin: 0 -3px;
	padding: 2px;
}

body #userListButton {
	display: none;
}

#controls button[type="submit"] {
	float: right;
}

.highlight {
	background-color: rgba(255, 255, 255, 0.75);
}

body > #save {
	display: none;
}

/* Sidebars */

body.settings #settings, body.userList #userList {
	display: block;
}

label {
	display: block;
	margin: 5px 0;
}

/* User groups */

.globalmod {
	text-decoration: underline;
}

.mod, .mod2, .mod3 {
	font-style: italic;
}

.silent {
	text-decoration: line-through;
}

/* Moderation */

#metaOptions, .modPowers #metaResults, #metaResults li {
	display: none;
}

#metaOptions input {
	vertical-align: middle;
	margin: 0 0 0 2px;
}

/* BBCode */

.padded {
	padding: 5px;
	border-radius: 5px;
}

.spoiler {
	position: relative;
	padding: 0 2px;
	border: 1px dashed #ccc;
	cursor: pointer;
}

.spoiler input {
	display: none;
}

.spoiler input + span + span, .spoiler input:checked + span {
	display: none;
}

.spoiler input:checked + span + span {
	display: inline;
}

.userID {
	display: block;
	color: #000000;
	font-size: 11px;
}

#backgroundAudio {
	width: 100%;
}

/* Online / Idle Status  */

.sidebar h1 {
	margin: 5px;
}

#online li {
	list-style: none;
	background: url("/static/img/sburb_green.png") no-repeat 0 0;
	padding-left: 16px;
}

#idle li {
	list-style: none;
	background: url("/static/img/sburb_red.png") no-repeat 0 0;
	padding-left: 16px;
}

#actionList li {
	list-style: disc;
	background: none;
	padding-left: 0;
}

/* Sidebar Menu */

#chatName {
	text-align: center;
}

#menu, #unban {
	display: none;
}

.modPowers #menu {
	display: block;
	text-align: center;
	margin-bottom: 10px;
}

.pwbPowers #unban {
	display: inline-block;
}

#chatName {
	padding: 5px;
}

#menu.showmenu #metaOptions {
	display: block;
}

#menu:hover, .showmenu {
	color: rgb(238, 238, 238);
	background-color: rgb(153, 153, 153);
}

.button {
	border: 1px solid rgba(0,0,0,0.0);
	height: 25px;
	width: 200px;
	margin-bottom: 10px;
}

.active {
	background-color: #333333;
}

#topic:not(:empty) {
	border-bottom: 1px solid #999999;
}

/* Archive */

#archiveConversation {
	margin: 5px 0;
	padding: 2px 0;

	h1 {
		margin: 5px;
	}
}

.pager {
	padding: 2px 5px;
}

.timestamp {
	display: none;

	p:hover > & {
		display: block;
		float: right;
		color: #666;
	}
}

/* Mobile */

body.mobile {
	body, button, input, select, optgroup, option {
		font-size: 6px;
	}

	.sidebar {
		left: 5px;
		width: auto;
	}

	.sidebar .close {
		display: block;
		margin: 5px;
		float: right;
	}

	#conversation {
		right: 5px !important;
	}

	#controls {
		right: 8px !important;
	}

	#userListButton {
		display: inline;
	}

	.withSidebar #conversation, .withSidebar #controls {
		display: none;
	}

	#conversation, #userList, #settings {
		-webkit-overflow-scrolling: touch;
	}

	#userList, #settings {
		background-color: rgba(238, 238, 238, 1);
	}
}

